Clean up swagger
